Move buildJDK.sh logic in build.java